package log;

public class NotificationLogger {

    public void log(String message) {
        System.out.println("LOG: " + message);
    }
}