package sender;

public class EmailSender implements MessageSender {
    @Override
    public void send(String message) {
        System.out.println("EMAIL enviado: " + message);
    }
}